@@ -33,13 +33,25 @@ themeFile = default-gl.theme
 # dataPath - Path to glFTPD's "data" directory.
 # rootPath - Path to the glFTPD directory.
 # shmKey   - glFTPD's shared memory key.
-# version  - Online structure version, must be 2.00 or 2.01.
+# version  - Online structure version, must be "2.00" or "2.01".
+# host     - FTP server host.
+# port     - FTP server port.
+# user     - Bot user, must have siteop flag(s).
+# passwd   - Bot password.
+# secure   - Connection security, must be "ssl", "tls", or "none".
 #
 [GlFtpd]
 dataPath = /glftpd/ftp-data/
 rootPath = /glftpd/
 shmKey   = 0x0000DEAD
 version  = 2.01
+
+# FTP credentials.
+host     = 127.0.0.1
+port     = 21
+user     = sitebot
+passwd   = sitebot
+secure   = tls
 
 #### Commands
 #
