@@ -32,10 +32,22 @@ themeFile = default-io.theme
 #
 # deleteFlag - Flag given to users when they are deleted.
 # msgWindow  - ioFTPD's message window name.
+# host       - FTP server host.
+# port       - FTP server port.
+# user       - Bot user, must have siteop flag(s).
+# passwd     - Bot password.
+# secure     - Connection security, must be "ssl", "tls", or "none".
 #
 [IoFtpd]
 deleteFlag = 6
 msgWindow  = ioFTPD::MessageWindow
+
+# FTP credentials.
+host       = 127.0.0.1
+port       = 21
+user       = sitebot
+passwd     = sitebot
+secure     = tls
 
 #### Commands
 #
