@@ -4,6 +4,7 @@ AlcoBot v0.5.0 (not released):
   NEW: Expanded zipscript support to include ioSFV (_tUFF) and Project-ZS (Caladan/esmandil).
   NEW: File listing all available variables (generated by makeVarRef.tcl).
   NEW: Rewrote the command interface, proper support for aliases and flag checking.
+  NEW: The "ftpd" module now maintains a connection to the FTP server.
   CHG: Removed the "cmdPrefix" option from [Module::Free].
   CHG: The option names in [Commands] are the base names of commands instead of a pattern.
   FIX: Fixed ioZS support, the escape sequences are now properly substituted.
